Uploading working files
Functionally working.
Needs more search criteria and CSS.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final Project</title>
+    <link rel="stylesheet" href="styles.css">
+    <!-- <script src="index.js" defer></script> -->
 </head>
 <body>
-    <h1>Select a data set to work on</h1>
+    <h1>Select a dataset to work on</h1>
+
+    <nav class="topnav">
+        <a href="crimes.html">Crime Stats</a>
+        <a href="building.html">Building Permits</a>
+        <a href="trafficcameras.html">Traffic Cameras</a>
+        <a href="trafficincidents.html">Traffic Incidents</a>
+    </nav>
+    <hr>
+
+        
+
 </body>
 </html>
