added more search criterias

--- a/building.html
+++ b/building.html
@@ -23,6 +23,8 @@
         <br>
         <br>
         <label>Enter the Permit Number: </label><input type="text" id="searchpermit" size="13" value="BP2023-"/>
+        <label>Search by Address: </label><input type="text" id="searchaddress" />
+        <label>Search by Project Value: </label><input type="text" id="searchvalue" />
 
         <table id="buildingresults">
 
