--- a/crimes.html
+++ b/crimes.html
@@ -23,7 +23,9 @@
         <br>
         <br>
         <br>
+        <label>Search by Date: </label><input type="text" id="searchdate"/>
         <label>Enter the Sector: </label><input type="text" id="searchsector"/>
+        <label>Search by Community name : </label><input type="text" id="searchcommunity"/>
 
         <table id="crimeresults">
 
