--- a/trafficcameras.html
+++ b/trafficcameras.html
@@ -22,6 +22,8 @@
         <br>
         <br>
         <br>
+        <label>Search by Camera: </label><input type="text" id="searchcamera"/>
+        <label>Search the location: </label><input type="text" id="searchlocation"/>
         <label>Search the Quadrant: </label><input type="text" id="searchquadrant"/>
 
         <table id="cameraresults">
