--- a/trafficincidents.html
+++ b/trafficincidents.html
@@ -22,7 +22,9 @@
         <br>
         <br>
         <br>
+        <label>Search the Date: </label><input type="text" id="searchdate"/>
         <label>Search the Quadrant: </label><input type="text" id="searchquadrant"/>
+        <label>Search the intersection: </label><input type="text" id="searchintersection"/>
 
         <table id="trafficresults">
 
