--- a/trafficcameras.html
+++ b/trafficcameras.html
@@ -18,11 +18,11 @@
     <hr>
     <div id="trafficcameras">
         <h2>Traffic Cameras</h2>
-        <label> Note: Search NE, SE, NW, SW in the Quadrant field!</label>
+        <label> Note: Search NE, SE, NW, SW in the Quadrant field! and leave a space after Camera and enter number</label>
         <br>
         <br>
         <br>
-        <label>Search by Camera: </label><input type="text" id="searchcamera"/>
+        <label>Search by Camera: </label><input type="text" id="searchcamera" value="Camera "/>
         <label>Search the location: </label><input type="text" id="searchlocation"/>
         <label>Search the Quadrant: </label><input type="text" id="searchquadrant"/>
 
