--- a/trafficincidents.html
+++ b/trafficincidents.html
@@ -19,10 +19,11 @@
     <div id="trafficincidents">
         <h2>Traffic Incidents</h2>
         <label> Note: Search NE, SE, NW, SW in the Quadrant field!</label>
+        <p>Note: You can only search dates from June 08, 2023 to July 27, 2023 (i.e. - 2023-06-08 to 2023-07-27)</p>
         <br>
         <br>
         <br>
-        <label>Search the Date: </label><input type="text" id="searchdate"/>
+        <label>Search the Date: </label><input type="text" id="searchdate" value="2023-0"/>
         <label>Search the Quadrant: </label><input type="text" id="searchquadrant"/>
         <label>Search the intersection: </label><input type="text" id="searchintersection"/>
 
